--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "bootstrap-icons": "^1.6.1",
     "firebase": "^9.1.3",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
