--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --output-path angularapp --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.10",
+    "@angular/cli": "~12.2.7",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/fire": "^7.1.0",
     "@angular/forms": "~12.2.0",
@@ -20,12 +23,15 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap-icons": "^1.6.1",
+    "express": "^4.17.1",
     "firebase": "^9.1.3",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
+    "path": "^0.12.7",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -41,5 +47,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
+  },
+  "engines": {
+    "node": "v14.17.6",
+    "npm": "6.14.15"
   }
 }
