--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/router": "~12.2.0",
     "bootstrap-icons": "^1.6.1",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.1.3",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
     "path": "^0.12.7",
@@ -33,12 +36,14 @@
     "sweetalert2": "^11.1.9",
     "tslib": "^2.3.0",
     "typescript": "~4.3.5",
+    "xlsx": "^0.17.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
