--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "apexcharts": "^3.29.0",
     "bootstrap-icons": "^1.6.1",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.1.3",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.4.0",
+    "ng-apexcharts": "^1.5.12",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
     "path": "^0.12.7",
