--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.1.3",
+    "highcharts": "^9.2.2",
+    "highcharts-angular": "^2.10.0",
     "html2canvas": "^1.3.2",
     "jspdf": "^2.4.0",
     "ng-apexcharts": "^1.5.12",
