--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jspdf": "^2.4.0",
     "ng-apexcharts": "^1.5.12",
     "ngx-loading": "^8.0.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.1.3",
     "path": "^0.12.7",
     "rxfire": "^6.0.0",
